search. Fix focus in popup inside treeviewitem

--- a/Diagnosis.Client.App/Screens/Search.xaml
+++ b/Diagnosis.Client.App/Screens/Search.xaml
@@ -130,6 +130,8 @@
                                         Value="0,1,0,0" />
                                 <Setter Property="BorderBrush"
                                         Value="{StaticResource AccentColorBrush2}" />
+                                <Setter Property="Focusable"
+                                        Value="{Binding AnyPopupOpen, Converter={StaticResource NegateBoolean}}" />
                             </Style>
                         </TreeView.ItemContainerStyle>
                         <ItemsControl.ItemTemplate>
