--- a/Diagnosis.Client.App/Controls/CardParts/HealthRecordEditor.xaml
+++ b/Diagnosis.Client.App/Controls/CardParts/HealthRecordEditor.xaml
@@ -2,6 +2,7 @@
              xmlns:controls="clr-namespace:Diagnosis.Client.App.Controls"
              xmlns:search="clr-namespace:Diagnosis.Client.App.Controls.Search"
              xmlns:screens="clr-namespace:Diagnosis.Client.App.Screens"
+             xmlns:card="clr-namespace:Diagnosis.Client.App.Controls.CardParts"
              x:Class="Diagnosis.Client.App.Controls.CardParts.HealthRecordEditor"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -291,196 +292,7 @@
                         <Grid FlowDirection="LeftToRight"
                               Background="Transparent"
                               Cursor="Arrow">
-                            <StackPanel Grid.IsSharedSizeScope="True">
-                                <StackPanel.Resources>
-                                    <Style TargetType="Grid">
-                                        <Setter Property="Margin"
-                                                Value="{StaticResource FormLineMargin}" />
-                                    </Style>
-                                </StackPanel.Resources>
-                                <Grid>
-                                    <Grid.ColumnDefinitions>
-                                        <ColumnDefinition Width="auto"
-                                                          MinWidth="110"
-                                                          SharedSizeGroup="label" />
-                                        <ColumnDefinition Width="auto"
-                                                          SharedSizeGroup="gr2" />
-                                        <ColumnDefinition Width="20" />
-                                        <ColumnDefinition />
-                                    </Grid.ColumnDefinitions>
-
-                                    <StackPanel Grid.Column="1"
-                                                Background="Transparent"
-                                                Visibility="{Binding DateSuggestions.Count, Converter={StaticResource MoreThanToVisibility}}"
-                                                Name="hoverSource">
-                                        <ToggleButton x:Name="Btn"
-                                                      HorizontalAlignment="Left"
-                                                      IsHitTestVisible="{Binding ElementName=Popup, Path=IsOpen, Mode=OneWay, Converter={StaticResource NegateBoolean}}">
-                                            <StackPanel Orientation="Horizontal">
-                                            <TextBlock Text="Вставить " />
-                                            <Path Data="{StaticResource RightTriangle}"
-                                                  Stretch="Uniform"
-                                                  Width="10"
-                                                  Height="10"
-                                                  Fill="Black"/>
-                                            </StackPanel>
-                                        </ToggleButton>
-
-                                        <Popup IsOpen="{Binding IsChecked, ElementName=Btn}"
-                                               x:Name="Popup"
-                                               Placement="Right"
-                                               PlacementTarget="{Binding ElementName=Btn}"
-                                               PopupAnimation="Scroll"
-                                               AllowsTransparency="True"
-                                               StaysOpen="False">
-                                            <Border BorderBrush="{StaticResource AccentColorBrush3}"
-                                                    BorderThickness="2"
-                                                    CornerRadius="10"
-                                                    Padding="3"
-                                                    Background="{StaticResource {x:Static SystemColors.ControlBrushKey}}">
-                                                <ItemsControl ItemsSource="{Binding DateSuggestions}">
-                                                    <ItemsControl.ItemTemplate>
-                                                        <DataTemplate>
-                                                            <TextBlock>
-                                                                <Hyperlink Command="{Binding SetDateCommand}">
-                                                                    <Run Text="{Binding Mode=OneWay}" />
-                                                                </Hyperlink>
-                                                            </TextBlock>
-                                                        </DataTemplate>
-                                                    </ItemsControl.ItemTemplate>
-                                                </ItemsControl>
-                                            </Border>
-                                        </Popup>                                       
-                                    </StackPanel>
-
-                                    <CheckBox IsChecked="{Binding IsIntervalEditorOpened}"
-                                              Grid.Column="3"
-                                              Content="Интервал" />
-                                </Grid>
-                                <Grid>
-                                    <Grid.ColumnDefinitions>
-                                        <ColumnDefinition Width="auto"
-                                                          SharedSizeGroup="label" />
-                                        <ColumnDefinition Width="auto"
-                                                          SharedSizeGroup="gr2" />
-                                        <ColumnDefinition Width="20" />
-                                        <ColumnDefinition />
-                                    </Grid.ColumnDefinitions>
-                                    <Label Content="Дата" />
-                                    <forms:ComboBoxDatePicker Year="{Binding EventDate.Year, Mode=TwoWay}"
-                                                              Month="{Binding EventDate.Month, Mode=TwoWay}"
-                                                              Day="{Binding EventDate.Day, Mode=TwoWay}"
-                                                              MaxYearsOverToday="5"
-                                                              WithPicker="True"
-                                                              Grid.Column="1" />
-                                    <TextBlock Text="—"
-                                               VerticalAlignment="Center"
-                                               HorizontalAlignment="Center"
-                                               Margin="0 0 0 0"
-                                               Visibility="{Binding IsIntervalEditorOpened,Converter={StaticResource BooleanToVisibilityConverter}}"
-                                               Grid.Column="2" />
-                                    <forms:ComboBoxDatePicker Visibility="{Binding DataContext.IsIntervalEditorOpened,Converter={StaticResource BooleanToVisibilityConverter},ElementName=hr}"
-                                                              DataContext="{Binding EventDate}"
-                                                              Year="{Binding To.Year, Mode=TwoWay}"
-                                                              Month="{Binding To.Month, Mode=TwoWay}"
-                                                              Day="{Binding To.Day, Mode=TwoWay}"
-                                                              MaxYearsOverToday="5"
-                                                              WithPicker="True"
-                                                              Grid.Column="3" />
-                                </Grid>
-                                <Grid>
-                                    <Grid.ColumnDefinitions>
-                                        <ColumnDefinition Width="auto"
-                                                          SharedSizeGroup="label" />
-                                        <ColumnDefinition Width="auto"
-                                                          SharedSizeGroup="gr2" />
-                                        <ColumnDefinition Width="20" />
-                                        <ColumnDefinition />
-                                    </Grid.ColumnDefinitions>
-                                    <Label>
-                                        <Label.Style>
-                                            <Style TargetType="Label"
-                                                   BasedOn="{StaticResource {x:Type Label}}">
-                                                <Setter Property="Content"
-                                                        Value="Давность" />
-                                                <Style.Triggers>
-                                                    <DataTrigger    Binding="{Binding EventDate.IsClosedInterval}"
-                                                                    Value="True">
-                                                        <Setter Property="Content"
-                                                                Value="Длительность" />
-                                                    </DataTrigger>
-                                                    <DataTrigger    Binding="{Binding EventDate.IsOpenedInterval}"
-                                                                    Value="True">
-                                                        <Setter Property="Content"
-                                                                Value="Стаж" />
-                                                    </DataTrigger>
-                                                </Style.Triggers>
-                                            </Style>
-                                        </Label.Style>
-                                    </Label>
-                                    <forms:DateOffsetPicker Grid.Column="1"
-                                                            Grid.ColumnSpan="3"
-                                                            DataContext="{Binding EventDate}" />
-                                </Grid>
-                                <Grid IsEnabled="{Binding EventDate.CanShowAsAge}">
-                                    <Grid.ColumnDefinitions>
-                                        <ColumnDefinition Width="auto"
-                                                          SharedSizeGroup="label" />
-                                        <ColumnDefinition Width="auto"
-                                                          SharedSizeGroup="gr2" />
-                                        <ColumnDefinition Width="20" />
-                                        <ColumnDefinition />
-                                    </Grid.ColumnDefinitions>
-                                    <Label Content="Возраст" />
-                                    <TextBlock HorizontalAlignment="Right"
-                                               VerticalAlignment="Center"
-                                               FontSize="{StaticResource LabelFontSize}"
-                                               Margin="0 0 3 10">
-                                        <TextBlock.Style>
-                                            <Style TargetType="TextBlock">
-                                                <Setter Property="Text"
-                                                        Value="c" />
-                                                <Style.Triggers>
-                                                    <DataTrigger Binding="{Binding EventDate.IsPoint}"
-                                                                 Value="True">
-                                                        <Setter Property="Text"
-                                                                Value="в" />
-                                                    </DataTrigger>
-                                                </Style.Triggers>
-                                            </Style>
-                                        </TextBlock.Style>
-                                    </TextBlock>
-                                    <DockPanel Grid.Column="1">
-                                        <TextBox Text="{Binding EventDate.AtAge, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True, TargetNullValue=''}"
-                                                 Width="50"
-                                                 HorizontalContentAlignment="Right">
-                                        </TextBox>
-
-                                        <TextBlock Text="{Binding EventDate.AtAge, Converter={StaticResource AgeToLabel}}"
-                                                   Margin="3,0,0,0"
-                                                   FontSize="{StaticResource LabelFontSize}"
-                                                   VerticalAlignment="Center"></TextBlock>
-                                    </DockPanel>
-                                    <TextBlock Text="до"
-                                               Margin="0 0 3 10"
-                                               FontSize="{StaticResource LabelFontSize}"
-                                               VerticalAlignment="Center"
-                                               Visibility="{Binding IsIntervalEditorOpened,Converter={StaticResource BooleanToVisibilityConverter}}"
-                                               Grid.Column="2" />
-                                    <DockPanel Grid.Column="3"
-                                               Visibility="{Binding IsIntervalEditorOpened,Converter={StaticResource BooleanToVisibilityConverter}}">
-                                        <TextBox Text="{Binding EventDate.ToAtAge, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True, TargetNullValue=''}"
-                                                 Width="50"
-                                                 HorizontalContentAlignment="Right">
-                                        </TextBox>
-
-                                        <TextBlock Text="{Binding EventDate.ToAtAge, Converter={StaticResource AgeToLabel}}"
-                                                   Margin="3,0,0,0"
-                                                   FontSize="{StaticResource LabelFontSize}"
-                                                   VerticalAlignment="Center" />
-                                    </DockPanel>
-                                </Grid>
-                            </StackPanel>
+                            <card:DateOffsetEditor />
                         </Grid>
                     </Expander>
                 </Grid>
