--- a/Diagnosis.Client.App/Controls/CardParts/HealthRecordEditor.xaml
+++ b/Diagnosis.Client.App/Controls/CardParts/HealthRecordEditor.xaml
@@ -199,103 +199,7 @@
                                          DataContext="{Binding DataContext, ElementName=editor}" />
             </DockPanel>-->
             <DockPanel>
-                <Grid>
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="auto" />
-                        <RowDefinition />
-                    </Grid.RowDefinitions>
-
-                    <StackPanel Grid.Row="0"
-                                diag:HelpProvider.Topic="hrdate"
-                                Orientation="Horizontal"
-                                ToolTip="Как показывать дату в списке записей?"
-                                Visibility="{Binding EventDate.IsEmpty, Converter={StaticResource NegBooleanToVisibilityConverter}}">
-                        <Label Content="Это было" />
-                        <StackPanel Orientation="Horizontal"
-                                    VerticalAlignment="Center">
-                            <RadioButton IsChecked="{Binding ShowAsDate}"
-                                         Margin="0 0 10 0"
-                                         Content="{Binding EventDate.PartialDateString}" />
-                            <RadioButton IsChecked="{Binding ShowAsOffset}"
-                                         Margin="0 0 10 0">
-                                <TextBlock>
-                                    <TextBlock Text="уже"
-                                               Visibility="{Binding EventDate.IsOpenedInterval, Converter={StaticResource BooleanToVisibilityConverter}}" />
-                                    <Run Text="{Binding EventDate.RoundedOffset, Mode=OneWay}" />
-                                    <Hyperlink Command="{Binding EventDate.SpinUnitCommand}">
-                                        <Run>
-                                            <Run.Text>
-                                                <MultiBinding Mode="OneWay"
-                                                              Converter="{StaticResource UnitForOffsetToUnitLabel}">
-                                                    <Binding Path="EventDate.RoundedUnit" />
-                                                    <Binding Path="EventDate.RoundedOffset" />
-                                                </MultiBinding>
-                                            </Run.Text>
-                                        </Run>
-                                    </Hyperlink>
-                                    <TextBlock Text="назад"
-                                               Visibility="{Binding EventDate.IsPoint, Converter={StaticResource BooleanToVisibilityConverter}}" />
-                                </TextBlock>
-                            </RadioButton>
-                            <RadioButton IsChecked="{Binding ShowAsAge}"
-                                         IsEnabled="{Binding EventDate.CanShowAsAge}"
-                                         Visibility="{Binding EventDate.CanShowAsAge, Converter={StaticResource BooleanToVisibilityConverter}}"
-                                         Content="{Binding EventDate.AtAgeString}" />
-                        </StackPanel>
-                    </StackPanel>
-                    <Expander x:Name="dateEditor"
-                              Grid.Row="1"
-                              diag:HelpProvider.Topic="hrdate"
-                              BorderBrush="{x:Null}"
-                              ExpandDirection="Down"
-                              FlowDirection="RightToLeft"
-                              Cursor="Hand"
-                              IsExpanded="{Binding IsDateEditorExpanded}">
-                        <Expander.Header>
-                            <StackPanel HorizontalAlignment="Right"
-                                        Width="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType={x:Type Expander}},Path=ActualWidth}">
-                                <Grid>
-                                    <Grid.ColumnDefinitions>
-                                        <ColumnDefinition Width="*" />
-                                        <ColumnDefinition Width="auto" />
-                                    </Grid.ColumnDefinitions>
-
-                                    <Label x:Name="header"
-                                           Grid.Column="1">
-                                        <Label.Style>
-                                            <Style TargetType="Label">
-                                                <Setter Property="Content"
-                                                        Value="Изменить дату" />
-                                                <Setter Property="FontSize"
-                                                        Value="{DynamicResource LabelFontSize}" />
-
-                                                <Style.Triggers>
-                                                    <DataTrigger Binding="{Binding EventDate.IsEmpty}"
-                                                                 Value="True">
-                                                        <Setter Property="Content"
-                                                                Value="Добавить дату" />
-                                                    </DataTrigger>
-                                                    <DataTrigger Binding="{Binding IsExpanded,RelativeSource={RelativeSource AncestorType=Expander}}"
-                                                                 Value="True">
-                                                        <Setter Property="Content"
-                                                                Value="Скрыть редактор даты" />
-                                                    </DataTrigger>
-                                                </Style.Triggers>
-                                            </Style>
-                                        </Label.Style>
-                                    </Label>
-                                    <Separator Grid.Column="0"
-                                               Width="auto" />
-                                </Grid>
-                            </StackPanel>
-                        </Expander.Header>
-                        <Grid FlowDirection="LeftToRight"
-                              Background="Transparent"
-                              Cursor="Arrow">
-                            <card:DateOffsetEditor />
-                        </Grid>
-                    </Expander>
-                </Grid>
+                <card:DateOffsetEditor DataContext="{Binding DateEditor}" />
             </DockPanel>
         </StackPanel>
     </Grid>
