--- a/Diagnosis.Client.App/Screens/Search.xaml
+++ b/Diagnosis.Client.App/Screens/Search.xaml
@@ -52,8 +52,8 @@
         <!--<TextBlock Style="{StaticResource ScreenTitle}"
                    Margin="5,0,0,0">Поиск</TextBlock>-->
 
-        <CheckBox IsChecked="{Binding UseOldMode}"
-                  Content="Старый поиск" />
+        <!--<CheckBox IsChecked="{Binding UseOldMode}"
+                  Content="Старый поиск" />-->
         
         <Expander x:Name="searchControls"
                   Style="{StaticResource SplitExpanderStyle}"
@@ -95,7 +95,7 @@
                 </StackPanel>
             </Expander.Header>
 
-            <Grid  Margin="0 10 0 0">
+            <Grid  Margin="0 0 0 0">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="*" />
                     <RowDefinition Height="auto" />
